本地相册详细取消按钮

--- a/workspace/WeAC/src/main/res/layout/activity_local_album_detail.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_local_album_detail.xml
@@ -18,6 +18,12 @@
             android:id="@+id/action_title"
             style="@style/action_title"/>
 
+        <TextView
+            android:id="@+id/action_cancel"
+            style="@style/action_tv"
+            android:layout_alignParentRight="true"
+            android:text="@string/cancel"/>
+
     </RelativeLayout>
 
     <GridView
