--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -86,6 +86,10 @@
     <color name="blue_ice">#72abf8</color>
     <!-- 冷蓝色:夜间气温 -->
 
+    <color name="progress_1">#448aff</color>
+    <color name="progress_2">#ff9800</color>
+    <color name="progress_3">#ff1744</color>
+
     <color name="default_image_background">#FFDEDEDE</color>
 
     <color name="colorPrimary">#009688</color>
@@ -101,8 +105,8 @@
 
     <!--    <color name="base_bg">#ffeeeeee</color>
         <color name="base_msg_color">#ff999999</color>-->
-    <color name="gplus_color_3">#3e802f</color>
-    <color name="gplus_color_2">#f4b400</color>
     <color name="gplus_color_1">#427fed</color>
+    <color name="gplus_color_2">#f4b400</color>
+    <color name="gplus_color_3">#3e802f</color>
     <color name="gplus_color_4">#b23424</color>
 </resources>
