--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -9,6 +9,8 @@
     <!-- 白色:20 -->
     <color name="white_trans40">#66ffffff</color>
     <!-- 白色:20 -->
+    <color name="white_trans50">#80FFFFFF</color>
+    <!-- 白色:60 -->
     <color name="white_trans60">#99FFFFFF</color>
     <!-- 白色:60 -->
     <color name="white_trans90">#e6ffffff</color>
@@ -89,6 +91,8 @@
     <color name="progress_1">#448aff</color>
     <color name="progress_2">#ff9800</color>
     <color name="progress_3">#ff1744</color>
+
+    <color name="memory">#ff5252</color>
 
     <color name="default_image_background">#FFDEDEDE</color>
 
