--- a/workspace/WeAC/src/main/res/menu/generate_qr_code_overflow.xml
+++ b/workspace/WeAC/src/main/res/menu/generate_qr_code_overflow.xml
@@ -8,5 +8,11 @@
     <item
         android:id="@+id/save_qr_code"
         android:title="@string/save_qr_code"/>
+    <item
+        android:id="@+id/fore_color"
+        android:title="二维码前景色"/>
+    <item
+        android:id="@+id/back_color"
+        android:title="二维码背景色"/>
 
 </menu>
