--- a/workspace/WeAC/src/main/res/menu/generate_qr_code_overflow.xml
+++ b/workspace/WeAC/src/main/res/menu/generate_qr_code_overflow.xml
@@ -10,10 +10,10 @@
         android:title="@string/save_qr_code"/>
     <item
         android:id="@+id/fore_color"
-        android:title="@string/fore_color"/>
+        android:title="@string/qrcode_fore_color"/>
     <item
         android:id="@+id/back_color"
-        android:title="@string/back_color"/>
+        android:title="@string/qrcode_back_color"/>
     <item
         android:id="@+id/restore"
         android:title="@string/restore"/>
