--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -16,9 +16,10 @@
         <item name="android:windowIsTranslucent">false</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <!-- 设置dialog的背景 -->
-        <!-- <item name="android:windowNoTitle">true</item> -->
+         <!--<item name="android:windowNoTitle">true</item>-->
         <!-- 设置title -->
-        <!-- <item name="android:windowFrame">@null</item> -->
+        <!--<item name="windowActionBar">false</item>-->
+         <!--<item name="android:windowFrame">@null</item>-->
         <!-- 设置边框 -->
         <!-- <item name="android:windowIsTranslucent">true</item> -->
         <!-- 设置半透明 -->
