--- a/workspace/WeAC/src/main/res/layout/activity_city_manage.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_city_manage.xml
@@ -62,11 +62,15 @@
         </FrameLayout>
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <GridView
         android:id="@+id/gv_city_manage"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="3"
+        android:scrollbars="none"
+        android:verticalSpacing="5dp">
 
-    </android.support.v7.widget.RecyclerView>
+    </GridView>
 </LinearLayout>
