--- a/workspace/WeAC/src/main/res/layout/fm_theme.xml
+++ b/workspace/WeAC/src/main/res/layout/fm_theme.xml
@@ -29,10 +29,11 @@
         android:id="@+id/gv_change_theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:padding="10dp"
+        android:background="@color/white_trans20"
         android:horizontalSpacing="10dp"
-        android:scrollbars="none"
         android:numColumns="2"
+        android:scrollbars="none"
         android:verticalSpacing="10dp"/>
 
 </LinearLayout>
