--- a/workspace/WeAC/src/main/res/drawable/bg_btn_sure_circle_normal.xml
+++ b/workspace/WeAC/src/main/res/drawable/bg_btn_sure_circle_normal.xml
@@ -3,6 +3,6 @@
     android:shape="oval"
     >
 
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorTimer" />
 
 </shape>
