--- a/workspace/WeAC/src/main/res/drawable/bg_btn_sure_circle_pressed.xml
+++ b/workspace/WeAC/src/main/res/drawable/bg_btn_sure_circle_pressed.xml
@@ -3,6 +3,6 @@
        android:shape="oval"
     >
 
-    <solid android:color="@color/colorPrimaryDark"/>
+    <solid android:color="@color/colorTimerDark"/>
 
 </shape>
