--- a/workspace/WeAC/src/main/res/layout/activity_about.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_about.xml
@@ -49,7 +49,7 @@
             android:layout_marginTop="5dp"
             android:text="@string/weac_version"
             android:textColor="@color/white_trans90"
-            android:textSize="@dimen/big_small"/>
+            android:textSize="@dimen/small"/>
 
         <TextView
             android:id="@+id/words"
@@ -58,7 +58,7 @@
             android:layout_marginTop="30dp"
             android:text="@string/about_words"
             android:textColor="@color/white_trans90"
-            android:textSize="@dimen/medium"/>
+            android:textSize="@dimen/large"/>
 
     </LinearLayout>
 
