--- a/workspace/WeAC/src/main/res/layout/activity_about.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_about.xml
@@ -56,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="@string/about_words"
+            android:text="@string/weac_slogan"
             android:textColor="@color/white_trans90"
             android:textSize="@dimen/large"/>
 
