--- a/workspace/WeAC/src/main/res/layout/activity_about.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_about.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     android:id="@+id/background"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,51 +24,5 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <!--// FIXME：-->
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_launcher"
-            app:riv_corner_radius="10dip">
-
-        </com.makeramen.roundedimageview.RoundedImageView>
-
-        <TextView
-            android:id="@+id/version_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="@string/weac_version"
-            android:textColor="@color/white_trans90"
-            android:textSize="@dimen/small"/>
-
-        <TextView
-            android:id="@+id/words"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/weac_slogan"
-            android:textColor="@color/white_trans90"
-            android:textSize="@dimen/large"/>
-
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/copyright"
-        android:textColor="@color/white_trans90"
-        android:textSize="@dimen/small"/>
+    <include layout="@layout/logo_weac"/>
 </RelativeLayout>
