--- a/workspace/WeAC/src/main/res/layout/activity_splash.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_splash.xml
@@ -11,43 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/wallpaper_0"/>
+        android:src="@drawable/wallpaper_4"/>
 
-    <TextView
-        android:id="@+id/splash_app_name_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="130dp"
-        android:drawableLeft="@drawable/ic_launcher"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textColor="@color/white_trans90"
-        android:textSize="35sp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/splash_slogan_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/splash_app_name_tv"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:text="@string/weac_slogan"
-        android:textColor="@color/white_trans90"
-        android:textSize="22sp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:text="@string/copyright"
-        android:textColor="@color/white_trans90"
-        android:textSize="@dimen/small"/>
+    <include layout="@layout/logo_weac"/>
 
 </RelativeLayout>
