天气闹钟主界面Fragment添加加载，修复天气增加到14天的bug和其他一些配置变化

--- a/workspace/WeAC/src/main/res/layout/activity_splash.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_splash.xml
@@ -13,6 +13,6 @@
         android:scaleType="fitXY"
         android:src="@drawable/wallpaper_4"/>
 
-    <include layout="@layout/logo_weac"/>
+    <include layout="@layout/layout_logo_weac"/>
 
 </RelativeLayout>
