--- a/workspace/WeAC/src/main/res/layout/activity_about.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_about.xml
@@ -24,5 +24,5 @@
 
     </RelativeLayout>
 
-    <include layout="@layout/logo_weac"/>
+    <include layout="@layout/layout_logo_weac"/>
 </RelativeLayout>
