--- a/workspace/WeAC/src/main/res/layout/activity_local_album.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_local_album.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     android:id="@+id/background"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -54,28 +53,5 @@
         android:textSize="@dimen/big_small"
         android:visibility="gone"/>
 
-    <LinearLayout
-        android:id="@+id/progress_bar_llyt"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <fr.castorflex.android.circularprogressbar.CircularProgressBar
-            android:id="@+id/loading_progress"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:indeterminate="true"
-            app:cpb_colors="@array/gplus_colors"/>
-
-        <TextView
-            android:id="@+id/loading_msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="@string/scanning"
-            android:textColor="@color/white_trans90"
-            android:textSize="@dimen/big_small"/>
-    </LinearLayout>
+    <include layout="@layout/layout_loading"/>
 </RelativeLayout>
