背景图片修改

--- a/workspace/WeAC/src/main/res/layout/activity_splash.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_splash.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/wallpaper_4"/>
+        android:src="@drawable/bg_welcome"/>
 
     <include layout="@layout/layout_logo_weac"/>
 
