--- a/workspace/WeAC/src/main/res/layout/activity_local_album_detail.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_local_album_detail.xml
@@ -26,21 +26,25 @@
 
     </RelativeLayout>
 
-    <GridView
-        android:id="@+id/album_picture_detail_gv"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:cacheColorHint="@color/transparent"
-        android:columnWidth="100dp"
-        android:fadingEdge="none"
-        android:fadingEdgeLength="0dp"
-        android:horizontalSpacing="2dp"
-        android:listSelector="@color/transparent"
-        android:numColumns="4"
-        android:overScrollMode="never"
-        android:padding="2dp"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="2dp"/>
+        android:layout_height="match_parent">
 
+        <GridView
+            android:id="@+id/album_picture_detail_gv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparent"
+            android:cacheColorHint="@color/transparent"
+            android:columnWidth="100dp"
+            android:fadingEdge="none"
+            android:fadingEdgeLength="0dp"
+            android:horizontalSpacing="2dp"
+            android:listSelector="@color/transparent"
+            android:numColumns="4"
+            android:overScrollMode="never"
+            android:padding="2dp"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="2dp"/>
+    </FrameLayout>
 </LinearLayout>
