--- a/workspace/WeAC/src/main/res/layout/activity_add_city.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_add_city.xml
@@ -36,7 +36,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@null"
-            android:drawableLeft="@android:drawable/ic_menu_search"
+            android:drawableLeft="@drawable/ic_search"
             android:drawablePadding="2dp"
             android:hint="@string/input_city_name"
             android:paddingBottom="3dp"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:paddingRight="5dp"
-            android:src="@android:drawable/ic_input_delete"
+            android:src="@drawable/ic_clear"
             android:visibility="gone"/>
     </LinearLayout>
 
