最低版本4.0  setBackground → setBackgroundDrawable

--- a/workspace/WeAC/src/main/res/layout/viewstub_time.xml
+++ b/workspace/WeAC/src/main/res/layout/viewstub_time.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingBottom="10dp">
 
     <com.kaku.weac.view.MyTimer
         android:id="@+id/timer"
