打赏自动跳转，计时高度计算，logo图标

--- a/workspace/WeAC/src/main/res/layout/activity_generate_code.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_generate_code.xml
@@ -67,7 +67,7 @@
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_marginLeft="19dp"
-                    android:background="@drawable/ic_launcher"
+                    android:background="@drawable/ic_logo"
                     android:scaleType="centerCrop"/>
 
                 <LinearLayout
