--- a/workspace/WeAC/src/main/res/layout/layout_logo_weac.xml
+++ b/workspace/WeAC/src/main/res/layout/layout_logo_weac.xml
@@ -20,8 +20,8 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_launcher"
-                app:riv_corner_radius="10dip">
+                android:src="@drawable/ic_logo"
+                app:riv_corner_radius="15dip">
 
             </com.makeramen.roundedimageview.RoundedImageView>
 
