--- a/workspace/WeAC/src/main/res/layout/viewstub_time.xml
+++ b/workspace/WeAC/src/main/res/layout/viewstub_time.xml
@@ -10,7 +10,7 @@
     <com.kaku.weac.view.MyTimer
         android:id="@+id/timer"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
         android:layerType="software"/>
