--- a/workspace/WeAC/src/main/res/layout/activity_capture.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_capture.xml
@@ -40,7 +40,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_gravity="center"
-                    android:background="@drawable/qr_code_bg">
+                    android:background="@drawable/bg_qr_code">
 
                     <ImageView
                         android:id="@+id/capture_scan_line"
