--- a/workspace/WeAC/src/main/res/values/styles.xml
+++ b/workspace/WeAC/src/main/res/values/styles.xml
@@ -2,11 +2,16 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Activity主题 -->
+    <style name="Transparent.holo" parent="@android:style/Theme.Holo.Light.NoActionBar">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:screenOrientation">portrait</item>
+    </style>
+    <!-- AppCompat主题 -->
     <style name="Transparent.Light" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:screenOrientation">portrait</item>
     </style>
-    <!-- Activity亮色主题 -->
+    <!-- AppCompat亮色主题 -->
     <style name="Transparent" parent="@style/Theme.AppCompat.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:screenOrientation">portrait</item>
