--- a/workspace/WeAC/src/main/res/layout/toast.xml
+++ b/workspace/WeAC/src/main/res/layout/toast.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/shape_circle_toast"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_margin="19dp"
+              android:background="@drawable/shape_circle_toast"
+              android:orientation="vertical">
 
     <TextView
         android:id="@+id/toast_tv"
@@ -15,6 +16,6 @@
         android:paddingRight="20dp"
         android:paddingTop="10dp"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"/>
 
 </LinearLayout>
