--- a/workspace/WeAC/src/main/res/layout/activity_faq.xml
+++ b/workspace/WeAC/src/main/res/layout/activity_faq.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingBottom="10dp"
             android:paddingLeft="@dimen/border_margin"
             android:paddingRight="@dimen/border_margin">
 
