--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -30,7 +30,9 @@
     <color name="black_trans40">#66000000</color>
     <!-- 黑色: 40 -->
     <color name="black_trans50">#80000000</color>
-    <!-- 黑色：50 -->
+    <!-- 黑色: 50 -->
+    <color name="black_trans60">#99000000</color>
+    <!-- 黑色：60 -->
     <color name="black_trans70">#b3000000</color>
     <!-- 黑色：70 -->
     <color name="black_trans80">#CC000000</color>
