--- a/workspace/WeAC/src/main/res/values/color.xml
+++ b/workspace/WeAC/src/main/res/values/color.xml
@@ -7,8 +7,10 @@
     <!-- 白色:10 -->
     <color name="white_trans20">#33ffffff</color>
     <!-- 白色:20 -->
+    <color name="white_trans30">#4dffffff</color>
+    <!-- 白色:30 -->
     <color name="white_trans40">#66ffffff</color>
-    <!-- 白色:20 -->
+    <!-- 白色:40 -->
     <color name="white_trans50">#80FFFFFF</color>
     <!-- 白色:60 -->
     <color name="white_trans60">#99FFFFFF</color>
