加强闹钟响铃，针对5.0系统添加白色保活方案，针对6.0系统后台广播与前台服务保持在一个进程

--- a/workspace/WeAC/src/main/res/layout/viewstub_time.xml
+++ b/workspace/WeAC/src/main/res/layout/viewstub_time.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     android:id="@+id/timer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="10dp"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <com.kaku.weac.view.MyTimer
         android:id="@+id/timer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
         android:layerType="software"/>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/timer">
 
         <RelativeLayout
             android:id="@+id/btn_start_llyt"
@@ -84,4 +81,4 @@
 
         </LinearLayout>
     </FrameLayout>
-</LinearLayout>
+</RelativeLayout>
