捕获闹钟响起时alarmClock为空的未知异常并提示

--- a/WeAC/src/main/res/layout/fm_alarm_clock_ontime.xml
+++ b/WeAC/src/main/res/layout/fm_alarm_clock_ontime.xml
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:singleLine="true"
+                android:lines="2"
                 android:text="@string/alarm_clock"
                 android:textColor="@color/white_trans90"
                 android:textSize="26sp"/>
