--- a/WeAC/src/main/res/layout/activity_local_album.xml
+++ b/WeAC/src/main/res/layout/activity_local_album.xml
@@ -42,8 +42,7 @@
             android:cacheColorHint="@color/transparent"
             android:divider="@color/white_trans10"
             android:dividerHeight="@dimen/divider_line_thin"
-            android:listSelector="@color/transparent"
-            android:overScrollMode="never">
+            android:listSelector="@color/transparent">
 
         </ListView>
 
